// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handleOrderUpdate, current sequence too small 1`] = `Object {}`;

exports[`handleOrderUpdate, method wrong, not loadingPairs 1`] = `Object {}`;

exports[`handleOrderUpdate, order processed already 1`] = `
Object {
  "orderHash1": 200,
}
`;

exports[`handleOrderUpdate, terminate a non existing liveOrder 1`] = `
Object {
  "orderHash1": 5,
}
`;

exports[`handleOrderUpdate, update orderBooks , add 1`] = `
Object {
  "orderHash1": 5,
}
`;

exports[`handleOrderUpdate, update orderBooks , add 2`] = `
Object {
  "orderHash1": Object {
    "account": "account1",
    "amount": 10,
    "balance": 5,
    "createdAt": 1234567890,
    "currentSequence": 5,
    "expiry": 1234567890000,
    "fee": 1,
    "feeAsset": "feeAsset",
    "fill": 1,
    "initialSequence": 1,
    "orderHash": "orderHash1",
    "pair": "pair",
    "price": 100,
    "side": "bid",
  },
}
`;

exports[`handleOrderUpdate, update orderBooks , add 3`] = `
Array [
  Array [
    "code1|code2",
    Object {
      "asks": Array [],
      "bids": Array [
        Object {
          "balance": 5,
          "count": 1,
          "price": 100,
        },
      ],
      "pair": "pair",
      "version": 123456789,
    },
    Object {
      "balance": 5,
      "count": 1,
      "pair": "code1|code2",
      "prevVersion": 0,
      "price": 100,
      "side": "bid",
      "version": 123456789,
    },
  ],
]
`;

exports[`handleOrderUpdate, update orderBooks , add 4`] = `
Object {
  "asks": Array [],
  "bids": Array [
    Object {
      "balance": 5,
      "initialSequence": 1,
      "orderHash": "orderHash1",
      "price": 100,
    },
  ],
}
`;

exports[`handleOrderUpdate, update orderBooks , add 5`] = `
Object {
  "asks": Array [],
  "bids": Array [
    Object {
      "balance": 5,
      "count": 1,
      "price": 100,
    },
  ],
  "pair": "pair",
  "version": 123456789,
}
`;

exports[`handleOrderUpdate, update orderBooks , terminate 1`] = `
Object {
  "orderHash1": 5,
}
`;

exports[`handleOrderUpdate, update orderBooks , terminate 2`] = `Object {}`;

exports[`handleOrderUpdate, update orderBooks , terminate 3`] = `
Array [
  Array [
    "code1|code2",
    Object {
      "asks": Array [],
      "bids": Array [],
      "pair": "pair",
      "version": 123456789,
    },
    Object {
      "balance": -5,
      "count": -1,
      "pair": "code1|code2",
      "prevVersion": 123456789,
      "price": 100,
      "side": "bid",
      "version": 123456789,
    },
  ],
]
`;

exports[`handleOrderUpdate, update orderBooks , terminate 4`] = `
Object {
  "asks": Array [],
  "bids": Array [],
}
`;

exports[`handleOrderUpdate, update orderBooks , terminate 5`] = `
Object {
  "asks": Array [],
  "bids": Array [],
  "pair": "pair",
  "version": 123456789,
}
`;

exports[`handleOrderUpdate,loading Pairs 1`] = `
Array [
  Object {
    "liveOrder": Object {
      "account": "account1",
      "amount": 10,
      "balance": 5,
      "createdAt": 1234567890,
      "currentSequence": 5,
      "expiry": 1234567890000,
      "fee": 1,
      "feeAsset": "feeAsset",
      "fill": 1,
      "initialSequence": 1,
      "orderHash": "orderHash1",
      "pair": "pair",
      "price": 100,
      "side": "bid",
    },
    "method": "add",
    "requestor": "requestor",
    "status": "status",
  },
]
`;

exports[`handleOrderUpdate,loading Pairs 2`] = `
Object {
  "orderHash1": 5,
}
`;

exports[`loadLiveOrders 1`] = `
Object {
  "asks": Array [
    Object {
      "balance": 5,
      "initialSequence": 9,
      "orderHash": "orderHash5",
      "price": 110,
    },
    Object {
      "balance": 5,
      "initialSequence": 11,
      "orderHash": "orderHash7",
      "price": 110,
    },
    Object {
      "balance": 5,
      "initialSequence": 12,
      "orderHash": "orderHash8",
      "price": 110,
    },
    Object {
      "balance": 5,
      "initialSequence": 10,
      "orderHash": "orderHash6",
      "price": 120,
    },
  ],
  "bids": Array [
    Object {
      "balance": 5,
      "initialSequence": 2,
      "orderHash": "orderHash2",
      "price": 110,
    },
    Object {
      "balance": 5,
      "initialSequence": 1,
      "orderHash": "orderHash1",
      "price": 100,
    },
    Object {
      "balance": 5,
      "initialSequence": 3,
      "orderHash": "orderHash3",
      "price": 100,
    },
    Object {
      "balance": 5,
      "initialSequence": 4,
      "orderHash": "orderHash4",
      "price": 100,
    },
  ],
}
`;

exports[`loadLiveOrders 2`] = `
Object {
  "asks": Array [
    Object {
      "balance": 15,
      "count": 3,
      "price": 110,
    },
    Object {
      "balance": 5,
      "count": 1,
      "price": 120,
    },
  ],
  "bids": Array [
    Object {
      "balance": 5,
      "count": 1,
      "price": 110,
    },
    Object {
      "balance": 15,
      "count": 3,
      "price": 100,
    },
  ],
  "pair": "code1|code2",
  "version": 123456789,
}
`;

exports[`loadLiveOrders 3`] = `
Array [
  Array [
    "code1|code2",
    Object {
      "asks": Array [
        Object {
          "balance": 15,
          "count": 3,
          "price": 110,
        },
        Object {
          "balance": 5,
          "count": 1,
          "price": 120,
        },
      ],
      "bids": Array [
        Object {
          "balance": 5,
          "count": 1,
          "price": 110,
        },
        Object {
          "balance": 15,
          "count": 3,
          "price": 100,
        },
      ],
      "pair": "code1|code2",
      "version": 123456789,
    },
  ],
]
`;

exports[`loadLiveOrders 4`] = `
Array [
  Array [
    "pending",
    Object {
      "liveOrder": Object {
        "account": "account1",
        "amount": 10,
        "balance": 5,
        "createdAt": 1234567890,
        "currentSequence": 5,
        "expiry": 1234567890000,
        "fee": 1,
        "feeAsset": "feeAsset",
        "fill": 1,
        "initialSequence": 1,
        "orderHash": "orderHash1",
        "pair": "pair",
        "price": 100,
        "side": "bid",
      },
      "method": "add",
      "requestor": "requestor",
      "status": "status",
    },
  ],
]
`;

exports[`loadLiveOrders 5`] = `Array []`;

exports[`updateOrderSequences 1`] = `16`;
